codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__spine_tree_command_hidden_when_disabled.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: popup
---
› /spine

  GPT-5.6-Sol default · /tmp/project
