codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__spine_tree_command_visible_when_enabled.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: popup
---
› /spine

  /spine-tree  show the current Spine tree
