codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__spine_tree_snapshot_configured_status_line_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                                    "
"                                                                                                    "
"› Ask Codex to do anything                                                                          "
"                                                                                                    "
"  1.7 aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa...                           "
